# HCS

./: CMakeLists.txt  README.md
logs/: as2_ABC.txt  as3_ABC.txt  c1c2ep_2_2-.txt  caida_2_12.txt  caida_3_12.txt  caida_4_12.txt  daiAs.txt  dblp2_ABC.txt  dblp3_ABC.txt  dblp_4_12.txt  dblp_d2k_4_12.txt  exp_easy_log.txt  lj_10.txt  onlylist_sdcc_ski_1_5_10  pikcc_ski_k7.txt  pivoterKCList_ski.txt  plsorted_dblp_2_7.txt  sdcc2_ski_1_50.txt  sdcc_ski_0_5_5  sdcc_ski_1_5_20  sdcc_ski_1_5_5  soc_2_12.txt  soc_pc_2_12  tmp.txt  uk_2_500.txt
logs/candidate/: ama_candpc_1_20  ama_candpc_1_5  ama_candpc_1_8  ama_candpc_2_20  ama_candpc_2_5  ama_candpc_2_8  ama_candpc_3_20  ama_candpc_3_5  ama_candpc_3_8  ama_candsdcc_1_20  ama_candsdcc_1_5  ama_candsdcc_1_8  ama_candsdcc_2_20  ama_candsdcc_2_5  ama_candsdcc_2_8  ama_candsdcc_3_20  ama_candsdcc_3_5  ama_candsdcc_3_8  ama_pc_1  ama_pc_1_20  ama_pc_2  ama_pc_2_20  ama_pc_3  ama_pc_3_20  ama_sdcc_1  ama_sdcc_1_20  ama_sdcc_2  ama_sdcc_2_20  ama_sdcc_3  ama_sdcc_3_20  cai_pc_1  cai_pc_1_20  cai_pc_2  cai_pc_2_20  cai_pc_3  cai_pc_3_20  cai_sdcc_1  cai_sdcc_1_20  cai_sdcc_2  cai_sdcc_2_20  (+76 more)
logs/d2kNg/: caida_d2kng_3_12.txt  caida_d2kng_4_12.txt  dblp_d2kng_2_12.txt  dblp_d2kng_2_20.txt  dblp_d2kng_3_12.txt  dblp_d2kng_3_20.txt  ep_d2kng_2_12.txt  ep_d2kng_2_20.txt  ep_d2kng_3_20.txt  wi_d2kng_2_12.txt  wi_d2kng_2_20.txt  wi_d2kng_3_20.txt
logs/diffMy/: 0a.txt  0b.txt  10a.txt  10b.txt  11a.txt  11b.txt  12a.txt  12b.txt  13a.txt  13b.txt  14a.txt  14b.txt  15a.txt  15b.txt  16a.txt  16b.txt  17a.txt  17b.txt  18a.txt  18b.txt  19a.txt  19b.txt  1a.txt  1b.txt  20a.txt  20b.txt  21a.txt  21b.txt  22a.txt  22b.txt  23a.txt  23b.txt  24a.txt  24b.txt  25a.txt  25b.txt  26a.txt  26b.txt  27a.txt  27b.txt  (+160 more)
logs/dpsdcc/: caida_1_10  caida_1_5  caida_2_10  caida_2_5  dblp_1_10  dblp_1_20  dblp_1_5  dblp_2_10  dblp_2_5  epin_1_10  epin_1_20  epin_2_10  epin_2_20  epin_2_5  sdcc_ski_1_10_10  sdcc_ski_1_30_30  sdcc_ski_1_50_50  sdcc_ski_1_5_10  wiki_1_5
logs/expEasy/: ama_pc_1_10  ama_pc_1_11  ama_pc_1_12  ama_pc_1_5  ama_pc_1_6  ama_pc_1_7  ama_pc_1_8  ama_pc_1_9  ama_pc_2_10  ama_pc_2_11  ama_pc_2_12  ama_pc_2_5  ama_pc_2_6  ama_pc_2_7  ama_pc_2_8  ama_pc_2_9  ama_pc_3_10  ama_pc_3_11  ama_pc_3_12  ama_pc_3_7  ama_pc_3_8  ama_pc_3_9  ama_pcv10_1_12  ama_pcv10_1_5  ama_pcv10_1_6  ama_pcv10_1_9  ama_pcv10_2_12  ama_pcv10_2_7  ama_pcv10_2_9  ama_pcv10_3_12  ama_pcv10_3_7  ama_pcv10_3_9  ama_pcv8_1_12  ama_pcv8_1_6  ama_pcv8_1_9  ama_pcv8_2_12  ama_pcv8_2_7  ama_pcv8_2_9  ama_pcv8_3_12  ama_pcv8_3_7  (+946 more)
logs/expHard/: pok_sdcc_1_15  pok_sdcc_1_40
logs/kclistCLique/: kclistClique_k3.txt  kclistClique_k4.txt  kclistClique_k5  kclistClique_k6.txt  kclistClique_k7.txt  kclistClique_k8.txt  ski_k10  ski_k11  ski_k12  ski_k13  ski_k14  ski_k15.txt  ski_k4  ski_k5  ski_k6  ski_k7  ski_k8  ski_k9
logs/kpp/: lj_4.txt  lj_5.txt  lj_5_onlychoose1vertex  lj_6.txt  lj_6_onlychoose1vertex  lj_7.txt  lj_8.txt  lj_8_onlychoose1vertex  lj_9_onlychoose1vertex  lj_minusClique_k10_cntpq.txt  lj_minusClique_k4_cntpq.txt  lj_minusClique_k8_cntpq.txt  lj_minusClique_k9_cntpq.txt
logs/kpp2/: lj10  lj4  lj5  lj6  lj7  lj9  lj_6_onlychoose1vertex  lj_6_onlylisting  lj_7_onlychoose1vertex  lj_8_onlychoose1vertex  lj_8noupdateAns  lj_9_onlychoose1vertex
logs/local/: ama_pELocal_1_6  ama_pELocalv9_1_6  ama_pVLocal_1_6  ama_pVLocalv9_1_6  ama_pcv10_1_6  ama_pcv9_1_6  ama_sELocal_1_6  ama_sVLocal_1_6  ama_sdcc_1_6  epi_pELocal_1_6  epi_pELocalv9_1_6  epi_pVLocal_1_6  epi_pVLocalv9_1_6  epi_pc_1_6  epi_pcv10_1_6  epi_pcv9_1_6  epi_sELocal_1_6  epi_sVLocal_1_6  pok_pELocal_1_6  pok_pELocalv9_1_6  pok_pVLocal_1_6  pok_pVLocalv9_1_6  pok_pcv10_1_6  pok_pcv9_1_6  pok_sELocal_1_6  pok_sVLocal_1_6  wik_pELocal_1_6  wik_pELocalv9_1_6  wik_pVLocal_1_6  wik_pVLocalv9_1_6  wik_pc_1_6  wik_pcv10_1_6  wik_sELocal_1_6  wik_sVLocal_1_6
logs/ngpc/: caida_2_12.txt  caida_2_3.txt  caida_2_4.txt  caida_2_5.txt  caida_3_12.txt  dblp_2_12.txt  dblp_2_20.txt  dblp_2_3.txt  dblp_3_12.txt  dblp_3_20.txt  ep_2_12.txt  (+5 more)
python/: tmp.py
src/local/: CMakeLists.txt  Makefile  cliqueLocal.cpp  plexELocal.cpp  plexLocal.cpp  plexLocal.h  plexVLocal.cpp  sdcLocal.cpp
src/sdc/: CMakeLists.txt  Makefile  cmake_install.cmake  kDList.cpp  kDList.h  sdcCounting.cpp  sdcCounting.h  sdcCounting2DP.cpp  sdcCounting2DP.h  sdcCounting2DPUB.cpp  sdcCountingMemBuffer.cpp
(+675 files in other folders)
